parser/src/snapshots/parser__token__tests__tokenize_valid_unicode_3.snap
---
source: parser/src/token.rs
expression: "&lexer.collect::<Vec<_>>()"
---
[
    Token {
        kind: LBrace,
        origin: "{",
        start_column: 1,
    },
    Token {
        kind: String,
        origin: "key",
        start_column: 2,
    },
    Token {
        kind: Colon,
        origin: ":",
        start_column: 7,
    },
    Token {
        kind: String,
        origin: "\\udbcd",
        start_column: 9,
    },
    Token {
        kind: RBrace,
        origin: "}",
        start_column: 17,
    },
    Token {
        kind: Eof,
        origin: "",
        start_column: 18,
    },
]
